unpackaged/main/default/objects/ResidentialLoanApplication/ResidentialLoanApplication.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>