unpackaged/main/default/objects/ResidentialLoanApplication/fields/Application_Approved__c.field-meta.xml
<CustomField>
    <fullName>Application_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Approved</label>
    <type>Checkbox</type>
</CustomField>