unpackaged/main/default/objects/ResidentialLoanApplication/fields/Application_Declined__c.field-meta.xml
<CustomField>
    <fullName>Application_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Declined</label>
    <type>Checkbox</type>
</CustomField>