unpackaged/main/default/objects/ResidentialLoanApplication/fields/Application_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Sub_Status__c</fullName>
    <label>Application Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Valuation In progress</fullName>
            </value>
            <value>
                <fullName>Valuation Pending</fullName>
            </value>
            <value>
                <fullName>Valuation Completed</fullName>
            </value>
            <value>
                <fullName>Loan Details Completed</fullName>
            </value>
            <value>
                <fullName>VOI In Progress</fullName>
            </value>
            <value>
                <fullName>VOI Pending</fullName>
            </value>
            <value>
                <fullName>VOI Completed</fullName>
            </value>
            <value>
                <fullName>IDV In Progress</fullName>
            </value>
            <value>
                <fullName>IDV Pending</fullName>
            </value>
            <value>
                <fullName>IDV Completed</fullName>
            </value>
            <value>
                <fullName>Financial Verification In Progress</fullName>
            </value>
            <value>
                <fullName>Financial Verification Pending</fullName>
            </value>
            <value>
                <fullName>Financial Verification Completed</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Waiting on Doc</fullName>
            </value>
            <value>
                <fullName>Doc reviewing</fullName>
            </value>
            <value>
                <fullName>Waiting Customer Resolution</fullName>
            </value>
            <value>
                <fullName>Waiting on IDV</fullName>
            </value>
            <value>
                <fullName>Waiting on Land Title</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>