unpackaged/main/default/objects/ResidentialLoanApplication/fields/Application_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Application_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks if the application was submitted by the customer</description>
    <inlineHelpText>Tracks if the application was submitted by the customer</inlineHelpText>
    <label>Application Submitted</label>
    <type>Checkbox</type>
</CustomField>