unpackaged/main/default/objects/ResidentialLoanApplication/fields/Current_Queue_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Queue_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Queue/Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Residential_Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>