unpackaged/main/default/objects/ResidentialLoanApplication/fields/CurrentLoanBalance__c.field-meta.xml
<CustomField>
    <fullName>CurrentLoanBalance__c</fullName>
    <description>When refinancing, this is the balance on the current loan</description>
    <label>Current Loan Balance</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>