unpackaged/main/default/objects/ResidentialLoanApplication/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Field used for syncing from postgresql to salesforce</description>
    <externalId>true</externalId>
    <inlineHelpText>Field used for syncing from postgresql to salesforce</inlineHelpText>
    <label>External_ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>