unpackaged/main/default/objects/ResidentialLoanApplication/fields/Lending_Product__c.field-meta.xml
<CustomField>
    <fullName>Lending_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lending Product</label>
    <referenceTo>loan__Loan_Product__c</referenceTo>
    <relationshipLabel>Residential Loan Applications</relationshipLabel>
    <relationshipName>Residential_Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>