unpackaged/main/default/objects/ResidentialLoanApplication/fields/Number_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Property__c</fullName>
    <inlineHelpText>Number of property attached to an application</inlineHelpText>
    <label>Number of Property</label>
    <summaryForeignKey>LoanApplicationProperty.LoanApplicationId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>