unpackaged/main/default/objects/ResidentialLoanApplication/fields/Property_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Property_Purpose__c</fullName>
    <label>Property Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Live In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>