unpackaged/main/default/objects/ResidentialLoanApplication/fields/Refinance_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Reasons__c</fullName>
    <label>Refinance Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I want a lower rate</fullName>
                <default>true</default>
                <label>I want a lower rate</label>
            </value>
            <value>
                <fullName>I want to pay off my mortgage sooner</fullName>
            </value>
            <value>
                <fullName>I want to borrow some extra money</fullName>
            </value>
            <value>
                <fullName>I am unhappy with my current lender</fullName>
            </value>
            <value>
                <fullName>I want specific loan features</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>