unpackaged/main/default/objects/ResidentialLoanApplication/fields/Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Date__c</fullName>
    <label>Settlement Date</label>
    <type>Date</type>
</CustomField>