unpackaged/main/default/objects/ResidentialLoanApplication/fields/Single_or_Joint__c.field-meta.xml
<CustomField>
    <fullName>Single_or_Joint__c</fullName>
    <label>Single or Joint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>