unpackaged/main/default/objects/ResidentialLoanApplication/fields/Type_of_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Interest_Rate__c</fullName>
    <label>Type of Interest Rate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Variable</fullName>
                <default>true</default>
                <label>Variable</label>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>