unpackaged/main/default/objects/ResidentialLoanApplication/validationRules/Max_Property_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Property_Validation</fullName>
    <active>false</active>
    <description>Associated property can't be more than one</description>
    <errorConditionFormula>Number_of_Property__c  &gt; 0</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>An application can have only one property associated with it.</errorMessage>
</ValidationRule>