unpackaged/main/default/objects/ResidentialLoanApplication/listViews/All_ResidentialLoanApplications.listView-meta.xml
<ListView>
    <fullName>All_ResidentialLoanApplications</fullName>
    <columns>Name</columns>
    <columns>LoanAmount__c</columns>
    <columns>LoanPurpose</columns>
    <columns>Lending_Product__c</columns>
    <columns>InterestRate</columns>
    <columns>AmortizationTerm</columns>
    <columns>LastModifiedDate</columns>
    <columns>Owner</columns>
    <filterScope>Everything</filterScope>
    <label>All Loan Applications</label>
</ListView>