unpackaged/main/default/objects/ResidentialLoanApplication/listViews/My_Application.listView-meta.xml
<ListView>
    <fullName>My_Application</fullName>
    <columns>Name</columns>
    <columns>Opportunity</columns>
    <columns>MortgageProgramType</columns>
    <columns>LotOriginalCost</columns>
    <columns>InterestRate</columns>
    <columns>AmortizationTerm</columns>
    <filterScope>Mine</filterScope>
    <label>5. My Loan Applications</label>
</ListView>